package io.github.lstramke.coincollector.model.DTOs;

public record LoginRequest(String username) {}
